--- a/labels.yml
+++ b/labels.yml
@@ -1,6 +1,15 @@
 # Listed alphabetically.
 # Dimensions in millimetres.
 
+Avery 3474:
+  rows: 8
+  columns: 3
+  width: 70
+  height: 37
+  row_gutter: 0.0
+  column_gutter: 0.0
+  page_width: 210.0
+  page_height: 297.0
 Avery 3657:
   rows: 10
   columns: 4
